popupConfirm renamed popupDialogue where are placed popconfirm, popalert, newrecord.

--- a/src/main.scss
+++ b/src/main.scss
@@ -39,7 +39,7 @@
 @import "pagination";
 @import "loading";
 @import "popupBox";
-@import "popupConfirm";
+@import "popupDialogue";
 @import "smiles";
 
 // -----------------------------------------------------------------------------
