--- a/src/popupDialogue.scss
+++ b/src/popupDialogue.scss
@@ -1,5 +1,5 @@
 /* POPUP BOX CONFIRMATION STYLES */
-#popconfirm {
+#popconfirm, #popalert, #newrecord  {
   .popup-box {
     border-radius: 10px !important;
     overflow: hidden !important;
