--- a/src/base.scss
+++ b/src/base.scss
@@ -394,3 +394,8 @@ body .tipsy {
     display: none !important;
   }
 }
+
+// Google recaptcha
+.g-recaptcha {
+  filter: invert(1) hue-rotate(40deg) brightness(0.6) contrast(0.9) !important;
+}
