search.scss fix

--- a/src/search.scss
+++ b/src/search.scss
@@ -9,8 +9,7 @@
 }
 
 /* Reset inline spacing */
-[style*="padding-left"], [style*="margin-right"] { 
-  padding-left: 0 !important; 
+#search_form [style*="margin-right"] { 
   margin-right: 0 !important; 
 }
 
