race text input width 100%

--- a/src/race.scss
+++ b/src/race.scss
@@ -484,6 +484,7 @@ body {
     background: $deepgray !important;
     border: none !important;
     padding: 8px;
+    width: 100% !important;
     box-sizing: border-box;
 
     // Race typeblock input text when error text color && bg color
