--- a/src/userPanel.scss
+++ b/src/userPanel.scss
@@ -66,7 +66,6 @@ $buttonHeight: 44px;
         border-bottom: none !important;
         width: $buttonWidth !important;
         height: $buttonHeight !important;
-        @include flex-center;
 
         .icon {
           &[src*="active"] {
@@ -342,3 +341,6 @@ $buttonHeight: 44px;
   font: bold 1.5em "Montserrat", sans-serif !important;
   color: gold !important;
 }
+
+/* KG_Daily_Progress */
+// Small fix to avoid centering 
