--- a/src/profile/_root.scss
+++ b/src/profile/_root.scss
@@ -266,11 +266,22 @@
     border: 1px solid $middlegray !important;
   }
 
-  .post {
+  .post:not(:has(.post-hidden)) {
     border-top: 1px solid $middlegray !important;
 
     &.post-hidden {
       background-color: $darkgray !important;
+      border-top: 1px solid gold !important; // Gold border for hidden posts
+
+      .hidden-mark {
+        margin-left: -7px !important;
+
+        span {
+          background-color: gold !important;
+          color: $black !important;
+        }
+      }
+
     }
 
     .content {
