new close button for modal. also new svg close icon.

--- a/src/base.scss
+++ b/src/base.scss
@@ -28,6 +28,12 @@ $awards: (
 );
 
 // Mixins
+@mixin flex-center {
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
+
 @mixin reset-styles {
   box-shadow: none !important;
   text-shadow: none !important;
