--- a/src/variables.scss
+++ b/src/variables.scss
@@ -325,10 +325,10 @@ $hiddenGameText: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg"
 
 // Race russian keyboard
 // RU
-$backRussianKeyboard: url('https://i.imgur.com/uzMvSd4.png');
-$foreRussianKeyboard: url('https://i.imgur.com/1zCEi67.png');
+$backRussianKeyboard: url("https://i.imgur.com/JkhSkyg.png");
+$foreRussianKeyboard: url("https://i.imgur.com/Jdon0BB.png");
 // EN
-$backEnglishKeyboard: url('https://i.imgur.com/SCi1AKA.png');
-$foreEnglishKeyboard: url('https://i.imgur.com/PL9WEUn.png');
+$backEnglishKeyboard: url("https://i.imgur.com/pzB4kEl.png");
+$foreEnglishKeyboard: url("https://i.imgur.com/cNTXVxU.png");
 // Shift keys
-$shiftKey: url('https://i.imgur.com/7WEWB5g.png');
+$shiftKey: url("https://i.imgur.com/alP9Hh6.png");
