race.scss enhancements #1

--- a/src/gametypes.scss
+++ b/src/gametypes.scss
@@ -62,6 +62,7 @@ $gametype-icons: (
 // ====================
 
 // Base styles for gametype signs
+#howtoplay .gametype-sign,
 .gametypes .gametype-sign,
 #gamelist .gametype-sign:not(.qual),
 #status .gametype-sign:not(.qual) {
