--- a/src/main.scss
+++ b/src/main.scss
@@ -11,7 +11,8 @@
 // 2. EXTERNAL DEPENDENCIES
 // -----------------------------------------------------------------------------
 /* Custom fonts */
-@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap"); // Montserrat
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap'); // Press Start 2P
 
 // -----------------------------------------------------------------------------
 // 3. BASE & RESET
