--- a/src/main.scss
+++ b/src/main.scss
@@ -71,4 +71,4 @@
 // -----------------------------------------------------------------------------
 // 8. RESPONSIVE & MEDIA QUERIES
 // -----------------------------------------------------------------------------
-@import "mediaQueries";
+@import "./mediaQueries/media";
