main menu adaptivity #1

--- a/src/mainMenu/mainMenu.scss
+++ b/src/mainMenu/mainMenu.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import "../variables";
 
 #head {
   &.green-back {
@@ -82,3 +82,5 @@
 .bar {
   background: none !important;
 }
+
+@import "adaptivity";
