--- a/src/main.scss
+++ b/src/main.scss
@@ -26,7 +26,7 @@
 @import "logo";
 @import "avatar";
 @import "userPanel";
-@import "mainMenu";
+@import "./mainMenu/mainMenu";
 @import "recentGames";
 
 // -----------------------------------------------------------------------------
