--- a/src/variables.scss
+++ b/src/variables.scss
@@ -335,3 +335,6 @@ $backEnglishKeyboard: url("https://i.imgur.com/pzB4kEl.png");
 $foreEnglishKeyboard: url("https://i.imgur.com/cNTXVxU.png");
 // Shift keys
 $shiftKey: url("https://i.imgur.com/alP9Hh6.png");
+
+// Main menu button call icon
+$menu: $black url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="hsl(200, 20%, 50%)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg>') no-repeat center / 25px;
