--- a/src/logo/logo.scss
+++ b/src/logo/logo.scss
@@ -1,4 +1,5 @@
-@import "variables";
+@import "../variables";
+@import "checkerboard";
 
 /* Logo styles */
 #head #logo {
@@ -16,22 +17,20 @@
     display: block !important;
     width: 150px !important;
     height: 45px !important;
-    transition: all 0.5s !important;
+    transition: filter 0.15s ease !important;
 
     &:hover {
-      filter: brightness(1.3) !important;
-      animation: moveLogo 0.8s 1;
+      filter: brightness(0.8) !important;
     }
 
     &::after {
       content: "" !important;
-      background: $logo !important;
-      background-size: 120px !important;
-      position: relative !important;
+      mask: $keysLogoBig no-repeat center / 130px !important;
+      @include checkerboard;
       height: 45px !important;
       width: 150px !important;
-      display: block !important;
-      transition: all 0.5s !important;
+      display: flex !important;
+      position: absolute !important;
     }
   }
 
@@ -41,11 +40,4 @@
   }
 }
 
-// Logo animation keyframes
-@keyframes moveLogo {
-  0% { transform: translateX(0px) skew(0deg); }
-  10% { transform: translateX(2px) skew(10deg); }
-  35% { transform: translateX(5px) skew(-12deg); }
-  70% { transform: translateX(-5px) skew(8deg); }
-  100% { transform: translateX(0px) skew(0deg); }
-}
+@import "logo-adaptive";
